# Charm

./: .gitignore  .krazy  BUILD  Building for OSX 10.4.txt  CMakeLists.txt  Charm.pro  CharmCMake.h.cmake  README  README.txt  ReadMe.markdown  ReadMe.md  ReadMe.txt  appveyor.ini  appveyor.yml  charmtimetracker.dsc  charmtimetracker.spec  debian.changelog  debian.control  debian.rules  doxygen-footer.html.in  doxygen.cfg  doxygen.cfg.in
Charm/: Application.cpp  Application.h  ApplicationCore.cpp  ApplicationCore.h  ApplicationFactory.cpp  ApplicationFactory.h  CMakeInstallDependencies.cmake.in  CMakeLists.txt  Charm.cpp  Charm.desktop  Charm.rc  CharmAboutDialog.cpp  CharmAboutDialog.h  CharmAboutDialog.ui  CharmPreferences.cpp  CharmPreferences.h  CharmPreferences.ui  CharmResources.qrc  CharmVersion.h  CharmWindow.cpp  CharmWindow.h  ChattyItemDelegate.cpp  ChattyItemDelegate.h  ConfigurationDialog.cpp  ConfigurationDialog.h  ConfigurationDialog.ui  Data.cpp  Data.h  DateEntrySyncer.cpp  DateEntrySyncer.h  EnterVacationDialog.cpp  EnterVacationDialog.h  EnterVacationDialog.ui  EventDisplay.cpp  EventDisplay.h  EventDisplay.ui  EventEditor.cpp  EventEditor.h  EventEditor.ui  EventEditorDelegate.cpp  (+81 more)
Charm/CI/: CharmCommandInterface.cpp  CharmCommandInterface.h  CharmCommandProtocol.h  CharmCommandServer.cpp  CharmCommandServer.h  CharmCommandSession.cpp  CharmCommandSession.h  CharmLocalCommandServer.cpp  CharmLocalCommandServer.h  CharmTCPCommandServer.cpp  CharmTCPCommandServer.h
Charm/Commands/: CommandAddTask.cpp  CommandAddTask.h  CommandDeleteEvent.cpp  CommandDeleteEvent.h  CommandDeleteTask.cpp  CommandDeleteTask.h  CommandEmitterInterface.h  CommandExportToXml.cpp  CommandExportToXml.h  CommandImportFromXml.cpp  CommandImportFromXml.h  CommandMakeAndActivateEvent.cpp  CommandMakeAndActivateEvent.h  CommandMakeEvent.cpp  CommandMakeEvent.h  CommandModifyEvent.cpp  CommandModifyEvent.h  CommandModifyTask.cpp  CommandModifyTask.h  CommandRelayCommand.cpp  CommandRelayCommand.h  CommandSetAllTasks.cpp  CommandSetAllTasks.h
Charm/HttpClient/: CheckForUpdatesJob.cpp  CheckForUpdatesJob.h  GetProjectCodesJob.cpp  GetProjectCodesJob.h  GetTimesheetStatusJob.cpp  GetTimesheetStatusJob.h  GetUserInfoJob.cpp  GetUserInfoJob.h  HTClient.cpp  HTClient.h  HTClientDialog.cpp  HTClientDialog.h  HTClientDialog.ui  HTConfig.h  HTConfigDialog.cpp  HTConfigDialog.h  HTConfigDialog.ui  HTGetProjectCodes.cpp  HTGetProjectCodes.h  HTUploadTimesheet.cpp  HTUploadTimesheet.h  HttpGetJob.cpp  HttpGetJob.h  HttpJob.cpp  HttpJob.h  RestJob.cpp  RestJob.h  UploadTimesheetJob.cpp  UploadTimesheetJob.h
Charm/Icons/: Charm.icns  CharmDMG.icns  CharmDSStore  charmtray.mng  update_icons.sh
Charm/Idle/: IdleCorrectionDialog.cpp  IdleCorrectionDialog.h  IdleCorrectionDialog.ui  IdleDetector.cpp  IdleDetector.h  MacCarbonIdleDetector.cpp  MacCarbonIdleDetector.h  MacCocoaIdleDetector.h  MacCocoaIdleDetector.mm  MacIdleDetector.h  MacIdleDetector.mm  MacOsIdleDetector.cpp  MacOsIdleDetector.h  WindowsIdleDetector.cpp  WindowsIdleDetector.h  X11IdleDetector.cpp  X11IdleDetector.h
Charm/Keychain/: gnomekeyring.cpp  gnomekeyring_p.h  keychain.cpp  keychain.h  keychain_dbus.cpp  keychain_mac.cpp  keychain_p.h  keychain_unix.cpp  keychain_unsecure.cpp  keychain_win.cpp
Charm/LOC/: TimesheetStatus.cpp  TimesheetStatus.h
Charm/Lotsofcake/: Configuration.cpp  Configuration.h
Charm/Qocoa/: qbutton.h  qbutton_mac.mm  qbutton_nonmac.cpp  qocoa_mac.h  qsearchfield.h  qsearchfield_mac.mm  qsearchfield_nonmac.cpp
Charm/QtQuick/: Charm.cpp
Charm/Reports/: ActivityReport.cpp  ActivityReport.h  ActivityReportConfigurationDialog.ui  ActivityReportConfigurationPage.ui  CharmReport.cpp  CharmReport.h  MonthlyTimesheet.cpp  MonthlyTimesheet.h  MonthlyTimesheetConfigurationDialog.cpp  MonthlyTimesheetConfigurationDialog.ui  MonthlyTimesheetXmlWriter.cpp  MonthlyTimesheetXmlWriter.h  ReportConfigurationDialog.cpp  ReportConfigurationDialog.h  ReportConfigurationPage.cpp  (+25 more)
Core/: Application.cpp  Application.h  CMakeLists.txt  Charm.cpp  Charm.h  CharmAboutDialog.cpp  CharmCMake.h.cmake  CharmCommand.cpp  CharmCommand.h  CharmConstants.cpp  CharmConstants.h  CharmDataModel.cpp  CharmDataModel.h  CharmDataModelAdapterInterface.h  CharmExceptions.cpp  CharmExceptions.h  CharmPreferences.cpp  CharmPreferences.h  CharmQtCompat.cpp  CharmQtCompat.h  CharmVersion.h  ChattyItemDelegate.cpp  ChattyItemDelegate.h  CommandEmitterInterface.h  Configuration.cpp  Configuration.h  ConfigurationDialog.cpp  ConfigurationDialog.h  ConfigurationDialog.ui  Controller.cpp  Controller.h  ControllerInterface.h  Data.cpp  Dates.cpp  Dates.h  Event.cpp  Event.h  EventEditor.cpp  EventEditor.h  EventEditorDelegate.cpp  (+51 more)
Tests/: BackendIntegrationTests.cpp  BackendIntegrationTests.h  CMakeLists.txt  CharmDataModelTests.cpp  CharmDataModelTests.h  ControllerTests.cpp  ControllerTests.h  DatesTests.cpp  DatesTests.h  EventModelFilterTests.cpp  EventModelFilterTests.h  ImportExportTests.cpp  ImportExportTests.h  SmartNameCacheTests.cpp  SmartNameCacheTests.h  SqLiteStorageTests.cpp  SqLiteStorageTests.h  SqlTransactionTests.cpp  SqlTransactionTests.h  TaskStructureTests.cpp  TaskStructureTests.h  TestApplication.cpp  TestApplication.h  TestData.qrc  TestHelpers.h  TimeSheetProcessorTests.cpp  TimeSheetProcessorTests.h  TimeSpanTests.cpp  TimeSpanTests.h  TimesheetStatusTests.cpp  TimesheetStatusTests.h  UpdateCheckerTests.cpp  UpdateCheckerTests.h  XmlSerializationTests.cpp  XmlSerializationTests.h
View/: Application.cpp  Application.h  CMakeLists.txt  Charm.cpp  CharmAboutDialog.h  CharmAboutDialog.ui  CharmPreferences.ui  CharmResources.qrc  ConfigurationDialog.cpp  ConfigurationDialog.h  EventEditor.cpp  EventEditor.h  EventEditor.ui  EventEditorDelegate.cpp  EventModelAdapter.cpp  EventModelAdapter.h  EventModelFilter.h  GUIState.cpp  Model.cpp  Model.h  SelectTaskDialog.cpp  SelectTaskDialog.ui  TaskIdDialog.cpp  TaskIdDialog.ui  TaskModelAdapter.cpp  TaskModelAdapter.h  View.cpp  View.h  ViewFilter.cpp  ViewFilter.h  ViewHelpers.h
(+202 files in other folders)
